# email-triage-openenv

./: Dockerfile  README.md  baseline.py  email_triage_env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  validate.py
data/: __init__.py  email_generator.py
graders/: __init__.py  classify_grader.py  full_triage_grader.py  grader_utils.py  prioritize_route_grader.py
results/: baseline_results.json
server/: __init__.py  app.py
