[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-openenv"
version = "0.1.0"
description = "A real-world email triage OpenEnv environment for training and evaluating LLM agents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Parul Jain", email = "paruljainsre02@gmail.com" }
]
keywords = ["openenv", "reinforcement-learning", "email", "triage", "llm", "agent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["__pycache__", "*.pyc", ".DS_Store"]

[project.urls]
"Homepage" = "https://huggingface.co/spaces/paruljaintechie/email-triage-openenv"
"Repository" = "https://github.com/paruljain02/email-triage-openenv"
